Refactoring new Domain to replace old... added AspectJ