@@ -8,4 +8,4 @@ rm -rf $BASE_DIR/target
 
 mvn clean -f $BASE_DIR/../pom.xml
 
-mvn install -DskipTests -Djetty.daemon=false -f $BASE_DIR/../webapp/pom.xml
+MAVEN_OPTS="-Xmx1024m -Xms1024m -XX:MaxPermSize=512m" mvn install -DskipTests -Djetty.daemon=false -f $BASE_DIR/../webapp/pom.xml
